@startuml
title Order Lifecycle (ExecReport State Machine)

[*] --> NEW
NEW --> ACK : status=ACK
ACK --> PARTIAL : fill>0 && remaining>0
ACK --> FILLED : remaining==0
PARTIAL --> PARTIAL : more fills
PARTIAL --> FILLED : remaining==0
NEW --> REJECTED : status=REJECTED
ACK --> CANCELLED : status=CANCELLED
PARTIAL --> CANCELLED : status=CANCELLED
ACK --> EXPIRED : status=EXPIRED
PARTIAL --> EXPIRED : status=EXPIRED
FILLED --> [*]
CANCELLED --> [*]
REJECTED --> [*]
EXPIRED --> [*]
@enduml
